--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -260,6 +260,8 @@ a:after {
     background: #2c3e50;
     padding-top: 60px;
     padding-bottom: 60px;
+    padding-left:0px;
+    padding-right:0px;
     color: white;
 }
 
