--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -253,6 +253,8 @@ a:after {
     background: #2c3e50;
     padding-top: 30px;
     padding-bottom: 30px;
+    padding-right:0px;
+    padding-left:0px
     color: white;
 }
 
