--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -246,6 +246,7 @@ a:after {
 
 #abc p {
 	color:white;
+	text-alogn:center;	
 }
 
 
@@ -255,6 +256,7 @@ a:after {
     padding-bottom: 30px;
     padding-right:0px;
     padding-left:0px
+    text-align:center;
     color: white;
 }
 
